fix overflow

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -38,4 +38,4 @@
 
 @import 'bulma-checkradio/dist/css/bulma-checkradio';
 @import 'bulma/bulma';
-html { overflow-y: hidden; }
+is-overflow-hidden { overflow-y: hidden; }
